[package]
name = "wordle_stats_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
chrono-english = "0.1.8"
dotenvy = "0.15.7"
envy = "0.4.2"
itertools = "0.14.0"
obstruct = "0.1.0"
poise = "0.6.1"
regex = "1.12.2"
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
